fix: user authorities